--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -174,9 +174,8 @@
     }
 
 
-//点击推送题目
+//点击题目
     $('#pushTopic').on('click',function(){
-//        console.log('推送题目');
         $('.mask').css({display:'block'});
         $('.topic_box').css({display:'block'});
         window.requestAnimationFrame(function(){
