--- a/public/drawboard/show.html
+++ b/public/drawboard/show.html
@@ -96,7 +96,7 @@
 <div class="attachment_box" id="attachment_box">
     <div class="navigate">
         <div class="nav text-hidden" id="nav"></div>
-        <div onclick="clickMask()" class="nav-back"></div>
+        <div onclick="clickMask()" class="nav-back-show"></div>
     </div>
     <div class="attachment-cont">
         <div class="attachment_list" id="attachment_list"></div>
