--- a/public/drawboard/main_app.html
+++ b/public/drawboard/main_app.html
@@ -7,7 +7,7 @@
     <script src='jquery.js' type='text/javascript'></script>
     <script type="text/javascript" src="rangeslider/range-slider.js?v=53"></script>
     <link href="rangeslider/range-slider.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="./main_app.css">
+   <!-- <link rel="stylesheet" href="./main_app.css"> -->
     <style type="text/css">
         body {
             margin: 0;
@@ -125,7 +125,7 @@
     <!--<div class="courseware-open" onclick="AddAttachmentChange('block')">
         <span>音</span>
     </div>-->
-    <div class="attachment_box" id="attachment_box">
+   <!-- <div class="attachment_box" id="attachment_box">
         <div class="navigate">
             <div class="nav text-hidden" id="nav"></div>
             <div onclick="clickMask()" class="nav-back"></div>
@@ -135,11 +135,11 @@
             <div onclick="onEndedPage(event)" id="attachment_bottom" class='attachment_bottom'>加载更多</div>
         </div>
     </div>
-    <div class="mask" id="mask" onclick="clickMask()"></div>
+    <div class="mask" id="mask" onclick="clickMask()"></div>  -->
     <!--蚁盘 end -->
 </body>
 <script type="application/javascript" src="../schoolClass/js/service.js"></script>
-<script src="./main_app.js"></script>
+<!--<script src="./main_app.js"></script>-->
 <script type="text/javascript">
 
 //     setTimeout(function(){
