--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -117,39 +117,70 @@
             layer.msg("请先移除已添加视频源");
             return;
         }
-        var html = "<div class='list-content'><div class='list-item'><span class='left'>rtsp地址</span><div class='inputWrap'><input id='rtsp_url' class='right nickname' value='rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov'/><div style='display:none' id='rtsUrl'></div></div></div><div class='list-item'><span class='justify left'>课堂昵称<span></span></span><div class='inputWrap'><input id='nick' class='right nickname'/></div></div><div class='list-item list-item-video'><canvas id='rtsp_preview_canvas' width='299px' height='161px'></canvas></div></div><div class='btn-cont'><span onclick='cancelUseRtsp();' class='btn-blue Ghost-btn'>取消</span><span onclick='rtspPreview();' class='btn-blue Solid-btn'>预览</span><span onclick='useRtspInclass(this)' id='useBtn' class='btn-blue Solid-btn'" +
-            ">使用</span></div>"
-        layer.open({
-            type: 1,
-            title: "请选择网络摄像头",
-            closeBtn: 0,
-            skin: "videoSource",
-            area: ['100%', '480px'], //宽高
-            offset: 'b',
-            content: html
-        });
-        //设置rts的值
-        getRtsUrl = function (url) {
-            $("#rtsp_url").val(url)
-        }
-        rtspUrlArr = makeArr(rtspUrlArr, "url")
-         //显示输入过的值
-        rtspUrlArr.forEach(function (v, i) {
-            $("#rtsUrl").append(`<div onClick='getRtsUrl("${v.url}")'>${v.url}</div>`)
-        })
-        $("#rtsp_url").focus(function () {
-            $("#rtsUrl").css("display", "block");
-        })
-        $("#rtsp_url").blur(function () {
-            rtspUrlArr = JSON.parse(localStorage.getItem("rtspUrl")) == null ? rtspUrlArr : JSON.parse(localStorage.getItem("rtspUrlArr"))
-            setTimeout(function () {
-                $("#rtsUrl").css("display", "none");
-            }, 300)
-        });
+        detectRtspCameraAudio(function(audios,audioHtml){
+            var html = "";
+            if(audios.length > 0){
+                html = "<div class='list-content'><div class='list-item'><span class='left'>rtsp地址</span><div class='inputWrap'><input id='rtsp_url' class='right nickname' value='rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov'/><div style='display:none' id='rtsUrl'></div></div></div><div class='list-item'>"+audioHtml+"</div><div class='list-item'><span class='justify left'>课堂昵称<span></span></span><div class='inputWrap'><input id='nick' class='right nickname'/></div></div><div class='list-item list-item-video'><canvas id='rtsp_preview_canvas' width='299px' height='161px'></canvas></div></div><div class='btn-cont'><span onclick='cancelUseRtsp();' class='btn-blue Ghost-btn'>取消</span><span onclick='rtspPreview();' class='btn-blue Solid-btn'>预览</span><span onclick='useRtspInclass(this)' id='useBtn' class='btn-blue Solid-btn'" +
+                    ">使用</span></div>";
+            }else{
+                html = "<div class='list-content'><div class='list-item'><span class='left'>rtsp地址</span><div class='inputWrap'><input id='rtsp_url' class='right nickname' value='rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov'/><div style='display:none' id='rtsUrl'></div></div></div><div class='list-item'><span class='justify left'>课堂昵称<span></span></span><div class='inputWrap'><input id='nick' class='right nickname'/></div></div><div class='list-item list-item-video'><canvas id='rtsp_preview_canvas' width='299px' height='161px'></canvas></div></div><div class='btn-cont'><span onclick='cancelUseRtsp();' class='btn-blue Ghost-btn'>取消</span><span onclick='rtspPreview();' class='btn-blue Solid-btn'>预览</span><span onclick='useRtspInclass(this)' id='useBtn' class='btn-blue Solid-btn'" +
+                    ">使用</span></div>";
+            }
 
+            layer.open({
+                type: 1,
+                title: "请选择网络摄像头",
+                closeBtn: 0,
+                skin: "videoSource",
+                area: ['100%', '480px'], //宽高
+                offset: 'b',
+                content: html
+            });
+            //设置rts的值
+            getRtsUrl = function (url) {
+                $("#rtsp_url").val(url)
+            }
+            rtspUrlArr = makeArr(rtspUrlArr, "url")
+            //显示输入过的值
+            rtspUrlArr.forEach(function (v, i) {
+                $("#rtsUrl").append(`<div onClick='getRtsUrl("${v.url}")'>${v.url}</div>`)
+            })
+            $("#rtsp_url").focus(function () {
+                $("#rtsUrl").css("display", "block");
+            })
+            $("#rtsp_url").blur(function () {
+                rtspUrlArr = JSON.parse(localStorage.getItem("rtspUrl")) == null ? rtspUrlArr : JSON.parse(localStorage.getItem("rtspUrlArr"))
+                setTimeout(function () {
+                    $("#rtsUrl").css("display", "none");
+                }, 300)
+            });
+        });
     }
 
 
+    function detectRtspCameraAudio(onDetectFinish){
+        var audios = new Array();
+        var audioHtml = "<span class='left'>音&nbsp&nbsp&nbsp&nbsp&nbsp频\n</span><div class='right-item' style='margin-left: 1px'>";
+        navigator.mediaDevices.enumerateDevices()
+            .then(function (devices) {
+
+                devices.forEach(function (device) {
+                    if (device.deviceId == 'default') {
+                        return;
+                    }
+                    if (device.kind == 'audioinput') {
+                        audios.push(device);
+                        audioHtml = audioHtml + "<label class='right'><input class='a-radio' name='audioinput' type='radio' value='" + device.deviceId + "' />" + "<span class='b-radio'></span><span class='b-ridioText'>" + device.label + "</span></label>";
+                    }
+                    console.log(device.kind + ": " + device.label + " id = " + device.deviceId);
+                });
+                audioHtml = audioHtml + "</div>";
+                onDetectFinish(audios,audioHtml);
+            }).catch(function (err) {
+                console.log(err.name + ": " + err.message);
+                onDetectFinish(audios,audioHtml);
+            });
+    }
 
 
     function cancelUseRtsp() {
@@ -157,14 +188,14 @@
         if(rtspUrl == null || rtspUrl == undefined || rtspUrl == ""){
             return;
         }
-        var port = rtspPortMap.get(rtspUrl);
-        if(port == null || port == undefined || port == ""){
-            defaultPort = defaultPort + 1;
-            port = defaultPort;
-        }
+//        var port = rtspPortMap.get(rtspUrl);
+//        if(port == null || port == undefined || port == ""){
+//            defaultPort = defaultPort + 1;
+//            port = defaultPort;
+//        }
         var message = {};
         message.command = "stopRtspStream";
-        message.wsPort = port;
+        message.wsPort = defaultPort;
         ipc.send('onRendererMessage', message);
 
         if (jsmpegPlayer) {
@@ -226,12 +257,17 @@
     function useRtspInclass() {
         var nick = $("#nick").val();
         var rtspUrl = $("#rtsp_url").val();
-        if (typeof (nick) == "undefined" || nick == "") {
-            layer.msg("请输入此设备在课堂中的昵称~~");
-            return;
-        }
+        var audioDeviceId = $("[name='audioinput']").filter(":checked").val();
         if (rtspUrl == undefined || rtspUrl == "") {
             layer.msg("请输入网络摄像头流地址~~");
+            return;
+        }
+        if(audioDeviceId == undefined || audioDeviceId == ""){
+            layer.msg("请选择音频设备~~");
+            return;
+        }
+        if (typeof (nick) == "undefined" || nick == "") {
+            layer.msg("请输入此设备在课堂中的昵称~~");
             return;
         }
         if (jsmpegPlayer) {
@@ -255,25 +291,26 @@
         localStorage.setItem("rtspUrl", JSON.stringify(rtspUrlArr));
         layer.closeAll();
 
-        addUsingIpCameraInfo(nick,rtspUrl);
-        innerUseIpCamera(nick,rtspUrl);
+        addUsingIpCameraInfo(nick,rtspUrl,audioDeviceId);
+        innerUseIpCamera(nick,rtspUrl,audioDeviceId);
     }
 
-    function innerUseIpCamera(nick,rtspUrl){
+    function innerUseIpCamera(nick,rtspUrl,audioDeviceId){
         var publish = Service.getQueryString("publish");
         var port = rtspPortMap.get(rtspUrl);
         if(port == null || port == undefined || port == ""){
             defaultPort = defaultPort + 1;
             port = defaultPort;
         }
-        var src = "videoSourceRtspInClass.html?vid=" + vid + "&userName=" + nick + "&wsPort=" + port + "&rtspUrl=" + rtspUrl+"&publish="+publish+"&userId="+teacherId+"&from="+from;
+        var src = "videoSourceRtspInClass.html?vid=" + vid + "&userName=" + nick + "&wsPort=" + port + "&rtspUrl=" + rtspUrl+"&publish="+publish+"&userId="+teacherId+"&from="+from+"&audioDeviceId="+audioDeviceId;
         $("#video_sources").append("<div class='videoSource_content-video'><div class='videoSource_content-video-left'><iframe src='" + src + "'></iframe></div><span class='videoSource_content-video-right' onclick='deleteVideoSource(this);'><i></i>关闭视频源</span></div>");
     }
 
-    function addUsingIpCameraInfo(userName,rtspUrl){
+    function addUsingIpCameraInfo(userName,rtspUrl,audioDeviceId){
         var device = {};
         device.type = "ipCamera";
         device.rtspUrl = ""+rtspUrl;
+        device.audioDeviceId = audioDeviceId;
         device.userName = userName;
         var savedList = JSON.parse(localStorage.getItem("usingDeviceList_"+from));
         if(savedList == null || savedList == undefined || !(savedList instanceof Array)){
@@ -432,7 +469,11 @@
                 if(type == "usbCamera"){
                     innerUseUsbCamera(device.videoDeviceId,device.audioDeviceId,device.userName);
                 }else if(type == "ipCamera"){
-                    innerUseIpCamera(device.userName,device.rtspUrl);
+                    var audioDeviceId = "";
+                    if(device.audioDeviceId){
+                        audioDeviceId = device.audioDeviceId;
+                    }
+                    innerUseIpCamera(device.userName,device.rtspUrl,audioDeviceId);
                 }else if(type == "screen"){
                     innerUseScreenInclass("桌面");
                 }
